kubernetes-orchestrations/clinical-data/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clinical-data-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  rules:
    - host: clinical-data-test-api.k8.ferlab.lan
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: clinical-data-test
              port:
                number: 4000
